src/test/deca/syntax/invalid/declVar-nameWithFigures.synt
declVar-nameWithFigures.deca:11:
